[package]
name = "totally-safe-transmute"
version = "0.0.3"
authors = ["Benjamin Herr <ben@0x539.de>"]
edition = "2018"
description = "I'm sure it's fine."
license = "AGPL-3.0-or-later"
repository = "https://github.com/ben0x539/totally-safe-transmute"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(any(target_os = "windows", target_os = "macos"))'.dependencies]
process-memory = "*"

[dependencies]
cfg-if = "*"
